# vmi

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICES  README.md  README.tpl  rustfmt.toml
crates/vmi-arch-aarch64/: Cargo.toml
crates/vmi-arch-aarch64/src/: address.rs  event.rs  interrupt.rs  lib.rs  paging.rs  registers.rs  translation.rs
crates/vmi-arch-amd64/: Cargo.toml  README.md
crates/vmi-arch-amd64/src/: address.rs  descriptor.rs  efer.rs  event.rs  lib.rs  paging.rs  registers.rs  rflags.rs  translation.rs
crates/vmi-arch-amd64/src/cr/: cr0.rs  cr2.rs  cr3.rs  cr4.rs  mod.rs
crates/vmi-arch-amd64/src/dr/: dr0.rs  dr1.rs  dr2.rs  dr3.rs  dr6.rs  dr7.rs  mod.rs
crates/vmi-arch-amd64/src/interrupt/: exception.rs  idt.rs  mod.rs
crates/vmi-arch-amd64/src/msr/: efer.rs  mod.rs
crates/vmi-arch-amd64/src/segment/: descriptor.rs  mod.rs  selector.rs
crates/vmi-core/: Cargo.toml  README.md
crates/vmi-core/docs/: os.md
crates/vmi-core/src/: arch.rs  context.rs  driver.rs  error.rs  event.rs  handler.rs  lib.rs  page.rs  session.rs
crates/vmi-core/src/core/: access_context.rs  address_context.rs  hex.rs  info.rs  macros.rs  memory_access.rs  mod.rs  vcpu_id.rs  view.rs
crates/vmi-core/src/ctx/: context.rs  cow.rs  mod.rs  prober.rs  session.rs  state.rs
crates/vmi-core/src/ctx_cow/: context.rs  mod.rs  session.rs  state.rs  state2.rs
crates/vmi-core/src/os/: common.rs  dummy.rs  image.rs  macros.rs  mapped.rs  mod copy.rs  mod.rs  module.rs  new_process.rs  process.rs  region.rs  struct_reader.rs  thread.rs  user_module.rs
crates/vmi-driver-kdmp/: Cargo.toml  README.md
crates/vmi-driver-kdmp/src/: driver.rs  error.rs  lib.rs
crates/vmi-driver-kdmp/src/arch/: amd64.rs  header64.rs  mod.rs
crates/vmi-driver-kvm/: Cargo.toml
crates/vmi-driver-kvm/src/: convert.rs  driver.rs  error.rs  lib.rs
crates/vmi-driver-kvm/src/arch/: mod.rs
crates/vmi-driver-kvm/src/arch/aarch64/: event.rs  mod.rs  registers.rs
crates/vmi-driver-kvm/src/arch/amd64/: event.rs  mod.rs  registers.rs
crates/vmi-driver-xen/: Cargo.toml  README.md
crates/vmi-driver-xen-core-dump/: Cargo.toml
crates/vmi-driver-xen-core-dump/src/: driver.rs  dump.rs  error.rs  lib.rs
crates/vmi-driver-xen-core-dump/src/arch/: amd64.rs  mod.rs
crates/vmi-driver-xen/src/: convert.rs  core.rs  driver.rs  error.rs  lib.rs
crates/vmi-driver-xen/src/arch/: mod.rs
crates/vmi-driver-xen/src/arch/amd64/: event.rs  mod.rs  registers.rs
crates/vmi-macros/: Cargo.toml  README.md
crates/vmi-macros/src/: __lifetime.rs  __transform.rs  common.rs  derive_os_impl.rs  derive_os_trait.rs  lib.rs  lifetime.rs  method.rs  transform.rs
crates/vmi-os-linux/: Cargo.toml  README.md
crates/vmi-os-linux/src/: error.rs  lib.rs  lib.rs.old  maple_tree.rs
crates/vmi-os-linux/src/arch/: amd64.rs  mod.rs
crates/vmi-os-linux/src/comps/: _dummy.rs  dentry.rs  file.rs  fs_struct.rs  macros.rs  mm_struct.rs  mod.rs  path.rs  qstr.rs  task_struct.rs  vfsmount.rs  vm_area_struct.rs
crates/vmi-os-linux/src/iter/: list.rs  maple_tree.rs  maple_tree.rs.todo  maple_tree_new.rs  mod.rs  tree.rs
crates/vmi-os-linux/src/offsets/: mod.rs
crates/vmi-os-windows/: Cargo.toml  README.md
crates/vmi-os-windows/src/: __object.rs  __vmios2.rs  error.rs  handle_table.rs  handle_table_entry.rs  image.rs  iterators.rs  lib.bkp.rs  lib.rs  macros.rs  module.rs  new_process.rs  process.rs  region.rs  thread.rs
crates/vmi-os-windows/src/__pe/: experimental.rs  experimental2.rs
crates/vmi-os-windows/src/arch/: aarch64.rs  amd64.rs  context.rs  mod.rs
crates/vmi-os-windows/src/comps/: control_area.rs  handle_table.rs  handle_table_entry.rs  image.rs  key_control_block.rs  kprcb.rs  luid.rs  macros.rs  mod.rs  module.rs  name_info.rs  object_attributes.rs  peb.rs  peb_ldr_data.rs  process_parameters.rs  region.rs  segment.rs  session.rs  sid.rs  teb.rs  trap_frame.rs  unloaded_driver.rs  user_module.rs  wow64.rs
crates/vmi-os-windows/src/comps/hive/: key_control_block.rs  key_index.rs  key_node.rs  key_value.rs  mod.rs
crates/vmi-os-windows/src/comps/object/: directory.rs  file.rs  key.rs  mod.rs  object_type.rs  process.rs  section.rs  thread.rs  token.rs
crates/vmi-os-windows/src/iter/: directory.rs  handle.rs  key_control_block.rs  key_node.rs  key_value.rs  list.rs  mod.rs  tree.rs
crates/vmi-os-windows/src/offsets/: mod.rs  v1.rs  v2.rs
crates/vmi-os-windows/src/pe/: codeview.rs  error.rs  experimental.rs  file.rs  headers.rs  mod.rs
crates/vmi-os-windows/src/pe2/: error.rs  mod.rs
crates/vmi-os-windows/src/peb/: mod.rs  process_parameters.rs
crates/vmi-os-windows/src/unwind/: amd64.rs  mod.rs
crates/vmi-os-windows/src/xobject/: control_area.rs  directory.rs  file.rs  mod.rs  name_info.rs  section.rs
crates/vmi-utils/: Cargo.toml  README.md
crates/vmi-utils/src/: hexdump.rs  interceptor.rs  lib.rs
crates/vmi-utils/src/bpm/: breakpoint.rs  mod.rs
crates/vmi-utils/src/bpm/controller/: breakpoint.md  breakpoint.rs  memory.md  memory.rs  mod.rs
crates/vmi-utils/src/bridge/: dispatch.rs  handler.rs  mod.rs  packet.rs  response.rs
crates/vmi-utils/src/bridge/arch/: amd64.rs  mod.rs
crates/vmi-utils/src/injector/: argument.rs  call.rs  macros.rs  mod.rs  recipe.rs
crates/vmi-utils/src/injector/arch/: amd64.rs  mod.rs
crates/vmi-utils/src/injector/os/: mod.rs  windows.rs
crates/vmi-utils/src/injector/os/windows/: kernel_mode.rs  mod.rs  user_mode.rs
crates/vmi-utils/src/ptm/: mod.rs
crates/vmi-utils/src/ptm/arch/: amd64.rs  amd64_tests.rs  mod.rs
docs/: vmi-arch-aarch64.md  vmi-arch-amd64.md  vmi-core-arch.md  vmi-core-os.md  vmi-driver-xen-core-dump.md  vmi-os-windows.md  vmi-utils.md
examples/: README.md  _common.rs  basic-process-list.rs  basic.rs  kernel-set-time.rs  kvm-basic-aarch64.rs  kvm-basic-process-list-aarch64.rs  kvm-basic-process-list.rs  kvm-basic.rs  kvm-kernel-set-time.rs  kvm-windows-breakpoint-manager.rs  kvm-windows-recipe-messagebox.rs  windows-breakpoint-manager.rs  windows-dump.rs  windows-recipe-messagebox.rs  windows-recipe-writefile-advanced.rs  (+2 more)
(+7 files in other folders)
