[package]
name = "vmi-arch-aarch64"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "AArch64 architecture specific code for VMI"
keywords = [
    "vmi",
    "aarch64",
    "arm64",
]

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true }
smallvec = { workspace = true, features = ["union"] }
zerocopy = { workspace = true, features = ["derive"] }

vmi-core = { workspace = true }
