[package]
name = "vmi-core"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Core VMI library"
keywords = [
    "vmi",
]

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true, features = ["serde"] }
lru = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true, features = ["union"] }
thiserror = { workspace = true }
tracing = { workspace = true }
zerocopy = { workspace = true }

isr-core = { workspace = true }
isr-macros = { workspace = true }

vmi-macros = { workspace = true }
