[package]
name = "vmi-driver-kdmp"
version = "0.2.0"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "VMI driver for Windows kernel dump"
keywords = [
    "vmi",
    "windows",
    "dump",
]

[lints]
workspace = true

[dependencies]
kdmp-parser = "0.5"
memmap2 = { workspace = true }
tracing = { workspace = true }
zerocopy = { workspace = true }

vmi-arch-amd64 = { workspace = true }
vmi-core = { workspace = true }
