[package]
name = "vmi-driver-xen"
version = "0.1.0"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Xen driver for VMI"
keywords = [
    "vmi",
    "xen",
]

[lints]
workspace = true

[dependencies]
libc = { workspace = true }
tracing = { workspace = true }

vmi-arch-amd64 = { path = "../vmi-arch-amd64", version = "0.1.0" }
vmi-core = { path = "../vmi-core", version = "0.1.0" }

xen = { path = "../../../xen", version = "0.1.0", package = "libxen" }
