[package]
name = "vmi-driver-xen"
version = "0.2.0"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "VMI driver for Xen hypervisor"
keywords = [
    "vmi",
    "xen",
]

[lints]
workspace = true

[dependencies]
libc = { workspace = true }
tracing = { workspace = true }

vmi-arch-amd64 = { workspace = true }
vmi-core = { workspace = true }

xen = { workspace = true }
