[package]
name = "vmi-os-linux"
version = "0.1.0"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Linux OS specific code for VMI"
keywords = [
    "vmi",
]

[lints]
workspace = true

[dependencies]
memchr = { workspace = true }
tracing = { workspace = true }

isr-core = { workspace = true }
isr-macros = { workspace = true }

vmi-arch-amd64 = { workspace = true }
vmi-core = { workspace = true }
