[package]
name = "vmi-os-windows"
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Windows OS specific code for VMI"
keywords = [
    "vmi",
]

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true, features = ["serde"] }
object = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zerocopy = { workspace = true }

isr-core = { workspace = true }
isr-dl-pdb = { workspace = true } # CodeView
isr-macros = { workspace = true }

vmi-arch-amd64 = { workspace = true }
vmi-core = { workspace = true }
vmi-macros = { workspace = true }

[dev-dependencies]
isr = { workspace = true }
# vmi = { workspace = true }
