[package]
name = "vmi-utils"
version = "0.2.1"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

homepage = { workspace = true }
repository = { workspace = true }
description = "Utilities for VMI"
keywords = [
    "vmi",
]

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
zerocopy = { workspace = true }

isr-core = { workspace = true, optional = true }
isr-macros = { workspace = true, optional = true }

vmi-core = { workspace = true }
vmi-arch-amd64 = { workspace = true, optional = true }
vmi-os-windows = { workspace = true, optional = true }

[dev-dependencies]
# vmi = { workspace = true }

[features]
default = [
    "arch-amd64",
    "os-windows",
    "bpm",
    "bridge",
    "injector",
    "interceptor",
    "ptm"
]

arch-amd64 = ["vmi-arch-amd64"]
os-windows = [
    "vmi-os-windows",
    "isr-core",
    "isr-macros"
]

bpm = []
bridge = []
injector = []
interceptor = []
ptm = []
